--- a/src/App.scss
+++ b/src/App.scss
@@ -66,54 +66,6 @@
     font-weight: 700;
     font-style: normal;
 }
-.magnet_icons_list{
-    display: flex;
-    gap: 120px;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-}
-
-.magnet_icons_item{
-     display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.magnet_icons_item_text p{
-     text-align: center;
-    font-size: 15.741px;
-    font-weight: 500;
-    margin-top: 5px;
-    max-width: 250px;
-}
-
-.magnet_icons_item_text h3{
-     text-align: center;
-    margin-top: 15px;
-    font-size: 19.676px;
-    font-weight: 700;
-
-}
-@media (max-width: 553px) {
-    .magnet_icons_item_text p{
-        max-width: 150px;
-        font-size: 9px;
-
-    }
-    .magnet_icons_item_text h3{
-        font-size: 12px;
-        margin-top: 10px;
-
-    }
-    .magnet_icons_item_image{
-         width: 50%;
-        height: 50%;
-    }
-
-}
-@media (max-width: 834px) {
-    .magnet_icons_list{
-        gap: 20px;
-    }
+.telephone_middle_border{
 
 }
