--- a/src/pages/home/components/commonProblems/style.scss
+++ b/src/pages/home/components/commonProblems/style.scss
@@ -207,7 +207,7 @@
     &:hover .problems_item_sub_text {
       opacity: 1;
       visibility: visible;
-      top: 60px;
+      top: 30px;
 
     }
     &:hover .common_problems_red_item_text, {
@@ -356,6 +356,7 @@
   position: relative;
   z-index: 1;
   align-items: center;
+  cursor: pointer;
 
   span {
     position: absolute;
@@ -396,6 +397,25 @@
   @media (max-width: $md4 + px) {
     height: 120px;
 
+  }
+  @media (any-hover: hover) {
+    &:hover .problems_item_sub_text {
+      opacity: 1;
+      visibility: visible;
+      top: 30px;
+
+    }
+    &:hover .common_problems_black_item_img, {
+      opacity: 0;
+      visibility: hidden;
+
+    }
+    &:hover .common_problems_black_item_text {
+      opacity: 0;
+      visibility: hidden;
+      transition: .3s;
+
+    }
   }
 }
 
