--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -1,6 +1,6 @@
 $black: #191923;
 $white:#FFF;
-$red: #bb184c;
+$red: #8D1038;
 $backgroundGradient: var(--hover, linear-gradient(180deg, #8D1038 0%, #191923 100%));
 $white1:#FFF0F0;
 
