--- a/src/pages/services/style.scss
+++ b/src/pages/services/style.scss
@@ -7,7 +7,8 @@
 }
 
 .services_header_block {
-
+  position: relative;
+  overflow: hidden;
   background: $backgroundGradient;
   margin: -20px 0;
   @media (max-width: $md4 + px) {
@@ -17,7 +18,7 @@
 }
 
 .services_top_section_body {
-  position: relative;
+
 }
 
 .services_animation_text_content {
@@ -34,10 +35,14 @@
       position: absolute;
       left: 0;
       bottom: 0;
-      width: 30%;
+      width: 10%;
       height: 1px;
       background-color: $white1;
 
+      @media (max-width: 508px) {
+        width: 30%;
+
+      }
     }
 
     @include adaptive-font(90, 40);
@@ -62,14 +67,17 @@
     color: $white;
     font-style: normal;
     font-weight: 400;
-    line-height: 24px; /* 54px */
-    padding-top: 20px;
-    @include adaptive-font(24, 10);
     max-width: 1040px;
+    padding-top: 20px;
+    @include adaptive-font(24, 14);
+    @include adaptive-value("line-height", 24, 14, 1);
+
     @media (max-width: $md2 + px) {
       max-width: 500px;
     }
   }
+
+  @include adaptive-value('margin-top', 30, 10, 1);
 
 }
 
@@ -77,13 +85,41 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  left: 0;
-  top: 0;
 
-  img {
-    position: absolute;
-    right: -150px;
+  left: 1000px;
+  bottom: 300px;
+
+  svg path {
     animation: pulse 10s linear infinite;
+  }
+
+  @media (max-width: 1467px) {
+    left: 700px;
+
+  }
+  @media (max-width: 1091px) {
+    left: 400px;
+    bottom: 400px;
+    svg {
+      width: 700px;
+
+    }
+
+  }
+  @media (max-width: 707px) {
+    svg {
+      width: 500px;
+
+    }
+    @media (max-width: 707px) {
+
+      left: 200px;
+    }
+
+    @media (max-width: 431px) {
+
+      left: 100px;
+    }
   }
 
 
@@ -107,15 +143,15 @@
 
 
 .services_list {
-  margin-top: 110px;
   display: flex;
   flex-direction: column;
-  gap: 50px;
+  @include adaptive-value("margin-top", 110, 72, 1);
+  @include adaptive-value("gap", 50, 15, 1);
 
 }
 
 .services_list_item {
-  padding: 35px 0 65px;
+  padding: 10px;
   border-radius: 2px;
   border: 1px solid #000;
   display: flex;
@@ -123,16 +159,16 @@
   justify-content: center;
   flex-direction: column;
   cursor: pointer;
-  transition: .3s;
+  transition: background .3s;
 
   h3 {
     color: #191923;
     font-style: normal;
     font-weight: 400;
     text-transform: uppercase;
-
-    @include adaptive-font(74, 32);
-    @include adaptive-value("line-height", 104, 114, 1);
+    text-align: center;
+    @include adaptive-font(74, 22);
+    @include adaptive-value("line-height", 104, 23, 1);
     cursor: pointer;
 
   }
@@ -146,26 +182,29 @@
     text-decoration-line: underline;
     cursor: pointer;
 
-    @include adaptive-font(30, 32);
-    @include adaptive-value("line-height", 36, 36, 1)
+    @include adaptive-font(30, 12);
+    @include adaptive-value("line-height", 36, 14, 1)
 
   }
 
   p {
     color: #191923;
     text-align: center;
-    font-size: 24px;
     font-style: normal;
     font-weight: 400;
-    @include adaptive-font(22, 24);
-    @include adaptive-value("line-height", 28, 28, 1)
+    @include adaptive-value("margin-top", 10, 5, 1);
+    @include adaptive-font(24, 12);
+    @include adaptive-value("line-height", 28, 12, 1);
 
 
   }
 
+  @include adaptive-value("padding-top", 35, 10, 1);
+  @include adaptive-value("padding-bottom", 65, 17, 1);
+
   @media (any-hover: hover) {
     &:hover {
-      background-color: $red;
+      background: $red ;
     }
     &:hover h3 {
       color: white;
@@ -181,17 +220,37 @@
 }
 
 .services_list_item > :not(:last-child) {
-  margin: 0 0 20px;
+  @include adaptive-value("margin-top", 20, 10, 1);
+
 }
-.services_list_body{
-   padding:  0 0 110px;
+
+.services_list_body {
 }
-.services_gap{
-   padding: 0 0 155px;
+
+.services_gap {
+  @include adaptive-value("padding-top", 155,35, 1);
+
 }
+
 .services_line {
   height: 1px;
   max-width: 80%;
   background-color: black;
   margin: 0 auto;
+  margin-top: 100px;
+  @media (max-width: $md2 + px) {
+     display: none;
+  }
+}
+
+.logo-img path {
+  fill: red;
+  width: 3.2rem;
+  height: 3.2rem;
+}
+.services_distinguishes_Us .distinguishes_us_section .G-container{
+  padding: 0 15px;
+}
+.services_distinguishes_Us .distinguishes_us_section .G-container .services_row3{
+  left: 50px;
 }
