--- a/src/assets/@mixin.scss
+++ b/src/assets/@mixin.scss
@@ -42,7 +42,7 @@
 
 
 @mixin buttonHover() {
-  background: var(--hover, linear-gradient(180deg, #91183d 0%, #24242a 700%));
+  background: var(--hover, linear-gradient(180deg, #8D1038  0%, #191923 700%));
   transition: .3s;
 
 }
