--- a/src/pages/components/scrollTop/style.scss
+++ b/src/pages/components/scrollTop/style.scss
@@ -22,7 +22,9 @@ svg{
     width: 50%;
     height: 50%;
   }
-
+  path{
+    stroke: white;
+  }
 }
   @media (max-width: $md4 + px) {
     padding: 5px 1px;
@@ -30,9 +32,7 @@ svg{
   }
   &:hover{
 
-    svg path{
-      stroke: white;
-    }
+
   }
 }
 
