--- a/src/pages/home/components/ourServices/style.scss
+++ b/src/pages/home/components/ourServices/style.scss
@@ -40,7 +40,7 @@
 .our_services_content {
 
   &.active {
-    background-color: red;
+    background-color: $red;
   }
   @media screen  and (max-width: $md2 + px){
      max-width: 800px;
@@ -87,7 +87,7 @@
     text-transform: uppercase;
     text-decoration: underline;
     text-underline-offset: 8px;
-    text-decoration-thickness: 3px;
+    text-decoration-thickness: 1px;
     text-decoration-color: $red;
     @include adaptive-font(75 , 40 );
     @include adaptive-value( "line-height" , 100 , 40 , 1);
