--- a/src/pages/home/components/portfolio/style.scss
+++ b/src/pages/home/components/portfolio/style.scss
@@ -176,7 +176,7 @@
   }
 }
 .services_portfolio_item:hover{
-  background: var(--hover, linear-gradient(180deg, #8D1038 0%, #191923 100%));
+  background: linear-gradient(180deg, #8D1038 0%, #191923 100%);
   transform: scale(1.1)
 
 }
@@ -198,7 +198,7 @@
 
 .portfolio_tools_red_button {
   border-radius: 4px;
-  background: var(--hover, linear-gradient(180deg, #8D1038 0%, #191923 100%));
+  background: linear-gradient(180deg, #8D1038 0%, #191923 100%);
   padding: 15px 57px;
   color: $white;
   text-align: center;
