--- a/src/pages/services/style.scss
+++ b/src/pages/services/style.scss
@@ -7,7 +7,6 @@
 }
 
 .services_header_block {
-  position: relative;
   overflow: hidden;
   background: $backgroundGradient;
   margin: -20px 0;
@@ -15,6 +14,15 @@
     margin: -60px 0;
 
   }
+}
+
+.services_animation_content-image {
+position: absolute;
+  left: 0;
+  top: 0;
+}
+.services_animation_content-image img{
+
 }
 
 .services_top_section_body {
@@ -81,49 +89,7 @@
 
 }
 
-.services_animation_content-image {
-  position: absolute;
-  width: 100%;
-  height: 100%;
 
-  left: 1000px;
-  bottom: 300px;
-
-  svg path {
-    animation: pulse 10s linear infinite;
-  }
-
-  @media (max-width: 1467px) {
-    left: 700px;
-
-  }
-  @media (max-width: 1091px) {
-    left: 400px;
-    bottom: 400px;
-    svg {
-      width: 700px;
-
-    }
-
-  }
-  @media (max-width: 707px) {
-    svg {
-      width: 500px;
-
-    }
-    @media (max-width: 707px) {
-
-      left: 200px;
-    }
-
-    @media (max-width: 431px) {
-
-      left: 100px;
-    }
-  }
-
-
-}
 
 @keyframes pulse {
   0% {
@@ -192,7 +158,7 @@
     text-align: center;
     font-style: normal;
     font-weight: 400;
-    @include adaptive-value("margin-top", 10, 5, 1);
+    @include adaptive-value("margin-top", 20, 5, 1);
     @include adaptive-font(24, 12);
     @include adaptive-value("line-height", 28, 12, 1);
 
@@ -204,7 +170,7 @@
 
   @media (any-hover: hover) {
     &:hover {
-      background: $red ;
+      background: $backgroundGradient;
     }
     &:hover h3 {
       color: white;
@@ -244,7 +210,7 @@
 }
 
 .logo-img path {
-  fill: red;
+  fill: $red;
   width: 3.2rem;
   height: 3.2rem;
 }
@@ -253,4 +219,80 @@
 }
 .services_distinguishes_Us .distinguishes_us_section .G-container .services_row3{
   left: 50px;
+}
+////
+
+.services_animation_top_block{
+  background: $backgroundGradient;
+  margin: -30px 0;
+  @media (max-width: $md4 + px) {
+    margin: -45px 0;
+
+  }
+}
+
+.services_top_section_body{
+  display: flex;
+  position: relative;
+  overflow: hidden;
+
+}
+.services_animation_text_content{
+  flex:  0 0  100%;
+
+  p {
+    color: $white;
+    font-style: normal;
+    font-weight: 400;
+    max-width: 1040px;
+    padding-top: 20px;
+    @include adaptive-font(24, 14);
+    @include adaptive-value("line-height", 24, 14, 1);
+
+    @media (max-width: $md2 + px) {
+      max-width: 500px;
+    }
+  }
+
+  @include adaptive-value('margin-top', 30, 10, 1);
+}
+.animation_header_image{
+
+}
+.about_animation_top_image{
+  position: absolute;
+  top: -200px;
+  right: -200px;
+  img{
+    animation: pulse 10s linear infinite;
+
+  }
+  @media (max-width: 1048px) {
+    top: -100px;
+
+  }
+  @media (max-width: 767px) {
+    top: -50px;
+
+  }
+
+  @media (max-width: $md4 + px) {
+    top: 20px;
+    right: -120px;
+
+  }
+
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
