--- a/src/pages/about/style.scss
+++ b/src/pages/about/style.scss
@@ -29,26 +29,28 @@
 .about_animation_top_image {
   position: absolute;
   top: -200px;
-  right: -200px;
+  right: -600px;
 
   img {
     animation: pulse 10s linear infinite;
 
   }
 
+  @media (max-width: 1204px) {
+    right: -400px;
+}
   @media (max-width: 1048px) {
-    top: -100px;
-
+    top: -80px;
+    right: -300px;
   }
   @media (max-width: 767px) {
     top: -50px;
-
+    right: -300px;
   }
 
   @media (max-width: $md4 + px) {
-    top: 20px;
     right: -120px;
-
+    top: -10px;
   }
 
 }
