--- a/src/pages/home/components/partners/style.scss
+++ b/src/pages/home/components/partners/style.scss
@@ -2,7 +2,7 @@
 @import "../../../../assets/@mixin";
 
 .partners_section {
-  @include adaptive-value("margin-top",102 ,50,1);
+  @include adaptive-value("margin-top", 102, 50, 1);
 
 }
 
@@ -38,11 +38,12 @@
       width: 60%;
 
     }
+
     @include h3_title();
-    @include adaptive-value("line-height",100 ,40,1);
-    @media (max-width: $maxWidthContainer + px){
-      @include adaptive-font(100,40);
-      @include adaptive-value("line-height",100,40,1)
+    @include adaptive-value("line-height", 100, 40, 1);
+    @media (max-width: $maxWidthContainer + px) {
+      @include adaptive-font(100, 40);
+      @include adaptive-value("line-height", 100, 40, 1)
 
     }
   }
@@ -56,9 +57,9 @@
   font-weight: 400;
   max-width: 1104px;
   background-color: white;
-  @include adaptive-font(22,18);
-  @include adaptive-value("line-height",27,21,1);
-  @include adaptive-value("margin-top",40,21,1)
+  @include adaptive-font(22, 18);
+  @include adaptive-value("line-height", 27, 21, 1);
+  @include adaptive-value("margin-top", 40, 21, 1)
 
 }
 
@@ -70,11 +71,11 @@
   gap: 5px;
   justify-content: center;
 
-  @media screen  and (max-width: $md1 + px){
+  @media screen and (max-width: $md1 + px) {
     flex-wrap: wrap;
     justify-content: center;
   }
-  @include adaptive-value("margin-top",35 , 16,1)
+  @include adaptive-value("margin-top", 35, 16, 1)
 
 
 }
@@ -91,20 +92,34 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  svg{
-     position: absolute;
-      width: 100%;
-      height: 100%;
-      padding: 0 20px;
+  padding: 10px;
+
+  svg {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    padding: 0 20px;
     transition: .3s;
   }
-  &:hover{
-     svg path{
-       fill: #4545e3;
-     }
+
+  &:hover {
+    svg path {
+      fill: #4545e3;
+    }
   }
 
 
+
+}
+
+.absolute_img{
+    img{
+       position: absolute;
+      left: 0;
+      top: 0;
+       width: 100%;
+      height: 100%;
+    }
 }
 
 
