--- a/src/assets/flex.scss
+++ b/src/assets/flex.scss
@@ -5,6 +5,13 @@
   margin: 0 auto;
   padding: 0 30px;
   position: relative;
+
+  @media screen and (max-width: $md3 + px) {
+    padding: 0 24px;
+  }
+  @media screen and (max-width: $md1 + px) {
+    padding: 0 15px;
+  }
 }
 
 .container{
