--- a/src/pages/home/components/commonProblems/style.scss
+++ b/src/pages/home/components/commonProblems/style.scss
@@ -23,7 +23,7 @@
   justify-content: center;
   border-radius: 4px;
   left: 0;
-  bottom: 200px;
+  bottom: 250px;
   z-index: -1;
 
 
@@ -37,7 +37,7 @@
 }
 
 .common_problems_body {
-  max-width: 1450px;
+  max-width: 1550px;
   width: 100%;
   margin: 0 auto;
 
@@ -207,7 +207,7 @@
     &:hover .problems_item_sub_text {
       opacity: 1;
       visibility: visible;
-      top: 30px;
+      top: 60px;
 
     }
     &:hover .common_problems_red_item_text, {
@@ -244,10 +244,9 @@
     text-align: center;
     font-style: normal;
     font-weight: 400;
-    line-height: 100%; /* 26px */
-    max-width: 166px;
+    line-height: 26px; /* 26px */
     padding: 4px;
-    @include adaptive-font(26, 10)
+    @include adaptive-font(24, 10)
   }
 }
 
@@ -402,7 +401,7 @@
     &:hover .problems_item_sub_text {
       opacity: 1;
       visibility: visible;
-      top: 30px;
+      top: 60px;
 
     }
     &:hover .common_problems_black_item_img, {
@@ -428,8 +427,7 @@
     font-style: normal;
     font-weight: 400;
     line-height: 100%; /* 26px */
-    max-width: 166px;
-    @include adaptive-font(26, 10)
+    @include adaptive-font(24, 10)
 
   }
 
